<resources>
    <string name="app_name">Limabora</string>
    <string name="Login_to_your_account">Login</string>
    <string name="Register_New_Account">Register</string>
    <string name="action_settings">Settings</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_link_to_register">Not Registered? Click Here.</string>
    <string name="btn_link_to_login">Already registred! Login Me.</string>
    <string name="welcome">Welcome</string>
    <string name="btn_logout">LOGOUT</string>
    <string name="name">Fullname</string>
    <string name="valve">Valve</string>
    <string name="air_conditioner">Air Conditioner</string>
</resources>
